tests/dataset/tpc-ds/compiler/c/q49.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  const char *channel;
  const char *item;
  double return_ratio;
  int return_rank;
  int currency_rank;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *channel;
  const char *item;
  double return_ratio;
  int return_rank;
  int currency_rank;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *channel;
  const char *item;
  double return_ratio;
  int return_rank;
  int currency_rank;
} tmp_item1_t;
typedef struct {
  int len;
  tmp_item1_t *data;
} tmp_item1_list_t;
tmp_item1_list_t create_tmp_item1_list(int len) {
  tmp_item1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *channel;
  const char *item;
  double return_ratio;
  int return_rank;
  int currency_rank;
} tmp_item2_t;
typedef struct {
  int len;
  tmp_item2_t *data;
} tmp_item2_list_t;
tmp_item2_list_t create_tmp_item2_list(int len) {
  tmp_item2_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item2_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *item;
  double return_ratio;
  double currency_ratio;
  int return_rank;
  int currency_rank;
} web_t;
typedef struct {
  int len;
  web_t *data;
} web_list_t;
web_list_t create_web_list(int len) {
  web_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *item;
  double return_ratio;
  double currency_ratio;
  int return_rank;
  int currency_rank;
} catalog_t;
typedef struct {
  int len;
  catalog_t *data;
} catalog_list_t;
catalog_list_t create_catalog_list(int len) {
  catalog_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *item;
  double return_ratio;
  double currency_ratio;
  int return_rank;
  int currency_rank;
} store_t;
typedef struct {
  int len;
  store_t *data;
} store_list_t;
store_list_t create_store_list(int len) {
  store_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *channel;
  const char *item;
  double return_ratio;
  int return_rank;
  int currency_rank;
} w_item_t;
typedef struct {
  int len;
  w_item_t *data;
} w_item_list_t;
w_item_list_t create_w_item_list(int len) {
  w_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(w_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *channel;
  const char *item;
  double return_ratio;
  int return_rank;
  int currency_rank;
} c_item_t;
typedef struct {
  int len;
  c_item_t *data;
} c_item_list_t;
c_item_list_t create_c_item_list(int len) {
  c_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(c_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *channel;
  const char *item;
  double return_ratio;
  int return_rank;
  int currency_rank;
} s_item_t;
typedef struct {
  int len;
  s_item_t *data;
} s_item_list_t;
s_item_list_t create_s_item_list(int len) {
  s_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(s_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q49_simplified_result;
static void test_TPCDS_Q49_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.channel = "catalog",
                            .item = "A",
                            .return_ratio = 0.3,
                            .return_rank = 1,
                            .currency_rank = 1},
                   (tmp_item_t){.channel = "store",
                                .item = "A",
                                .return_ratio = 0.25,
                                .return_rank = 1,
                                .currency_rank = 1},
                   (tmp_item1_t){.channel = "web",
                                 .item = "A",
                                 .return_ratio = 0.2,
                                 .return_rank = 1,
                                 .currency_rank = 1},
                   (tmp_item2_t){.channel = "web",
                                 .item = "B",
                                 .return_ratio = 0.5,
                                 .return_rank = 2,
                                 .currency_rank = 2}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q49_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q49_simplified_result.len; i3++) {
      if (test_TPCDS_Q49_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  web_t web[] = {(web_t){.item = "A",
                         .return_ratio = 0.2,
                         .currency_ratio = 0.3,
                         .return_rank = 1,
                         .currency_rank = 1},
                 (web_t){.item = "B",
                         .return_ratio = 0.5,
                         .currency_ratio = 0.6,
                         .return_rank = 2,
                         .currency_rank = 2}};
  int web_len = sizeof(web) / sizeof(web[0]);
  catalog_t catalog[] = {(catalog_t){.item = "A",
                                     .return_ratio = 0.3,
                                     .currency_ratio = 0.4,
                                     .return_rank = 1,
                                     .currency_rank = 1}};
  int catalog_len = sizeof(catalog) / sizeof(catalog[0]);
  store_t store[] = {(store_t){.item = "A",
                               .return_ratio = 0.25,
                               .currency_ratio = 0.35,
                               .return_rank = 1,
                               .currency_rank = 1}};
  int store_len = sizeof(store) / sizeof(store[0]);
  w_item_list_t tmp4 = create_w_item_list(web_len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < web_len; tmp6++) {
    web_t w = web[tmp6];
    if (!(w.return_rank <= 10 || w.currency_rank <= 10)) {
      continue;
    }
    tmp4.data[tmp5] = (w_item_t){.channel = "web",
                                 .item = w.item,
                                 .return_ratio = w.return_ratio,
                                 .return_rank = w.return_rank,
                                 .currency_rank = w.currency_rank};
    tmp5++;
  }
  tmp4.len = tmp5;
  c_item_list_t tmp7 = create_c_item_list(catalog_len);
  int tmp8 = 0;
  for (int tmp9 = 0; tmp9 < catalog_len; tmp9++) {
    catalog_t c = catalog[tmp9];
    if (!(c.return_rank <= 10 || c.currency_rank <= 10)) {
      continue;
    }
    tmp7.data[tmp8] = (c_item_t){.channel = "catalog",
                                 .item = c.item,
                                 .return_ratio = c.return_ratio,
                                 .return_rank = c.return_rank,
                                 .currency_rank = c.currency_rank};
    tmp8++;
  }
  tmp7.len = tmp8;
  s_item_list_t tmp10 = create_s_item_list(store_len);
  int tmp11 = 0;
  for (int tmp12 = 0; tmp12 < store_len; tmp12++) {
    store_t s = store[tmp12];
    if (!(s.return_rank <= 10 || s.currency_rank <= 10)) {
      continue;
    }
    tmp10.data[tmp11] = (s_item_t){.channel = "store",
                                   .item = s.item,
                                   .return_ratio = s.return_ratio,
                                   .return_rank = s.return_rank,
                                   .currency_rank = s.currency_rank};
    tmp11++;
  }
  tmp10.len = tmp11;
  list_int tmp = (concat(tmp4, tmp7, tmp10));
  list_int tmp13 = list_int_create(tmp.len);
  int *tmp16 = (int *)malloc(sizeof(int) * tmp.len);
  int tmp14 = 0;
  for (int tmp15 = 0; tmp15 < tmp.len; tmp15++) {
    int r = tmp.data[tmp15];
    tmp13.data[tmp14] = r;
    list_int result = list_int_create(4);
    result.data[0] = r.channel;
    result.data[1] = r.return_rank;
    result.data[2] = r.currency_rank;
    result.data[3] = r.item;
    tmp16[tmp14] = result;
    tmp14++;
  }
  tmp13.len = tmp14;
  for (int i19 = 0; i19 < tmp14 - 1; i19++) {
    for (int i20 = i19 + 1; i20 < tmp14; i20++) {
      if (tmp16[i19] > tmp16[i20]) {
        int tmp17 = tmp16[i19];
        tmp16[i19] = tmp16[i20];
        tmp16[i20] = tmp17;
        int tmp18 = tmp13.data[i19];
        tmp13.data[i19] = tmp13.data[i20];
        tmp13.data[i20] = tmp18;
      }
    }
  }
  list_int result = tmp13;
  _json_int(result.len);
  test_TPCDS_Q49_simplified_result = result;
  test_TPCDS_Q49_simplified();
  free(tmp4.data);
  free(tmp7.data);
  free(tmp10.data);
  free(result.data);
  return 0;
}
